# ssl_chat_qt

./: README.md
ssl_chat_qt/: CMakeLists.txt  Doxyfile  README.md  for_doc.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_test.cpp  shp.txt
ssl_chat_qt/helper/: install_dependencies.sh
ssl_server/: CMakeLists.txt  Doxyfile  README.md  scipher.cpp  scipher.h  scipher_tests.cpp  server.key  server.pem  ssl_server.cpp  ssl_server.h  ssl_server_test.cpp
